--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,8 @@
 }
 
 .App{
-  background: #222222;
-  height: 100vh;
+  /* background: #222222; */
+  background: #5d5d5a;
+  min-height: 100vh;
   width: 100vw
 }
