formatting images and videos

--- a/client/src/Chat.css
+++ b/client/src/Chat.css
@@ -178,6 +178,10 @@ video {
 
 }
 
+.message-bubble-hidden{
+  display : none
+}
+
 .user-style .message-bubble {
   /* background-color: #007bff; */
   color: white;
